# study-serverless-webapp

./: .dockerignore  .env.dev  .env.yaml.dev  .gitignore  Dockerfile  Dockerfile.dev  README.md  deploy.sh.dev  pyproject.toml  rebuild_or_restart.sh
app/: main.py  models.py
app/domain/: gemini.py
app/static/: index.html  script.js  video_analysis.html
