[project]
name = "study-serverless-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-tasks>=2.19.3",
    "google-genai>=1.40.0",
    "sse-starlette>=3.0.2",
    "uvicorn>=0.37.0",
]
